# memcacheq

./: .gitignore  CMakeLists.txt  README.md
dep/libevent/include/event2/: event-config.h
dep/libevent/lib/: libevent_core-2.2.so.1.0.0  libevent_pthreads-2.2.so.1
src/: CMakeLists.txt  atomicvar.h  config.h  hash.c  hash.h  hashtable.h  logger.c  logger.h  memcacheq.c  memcacheq.h  pq_manager.c  pq_manager.h  pqueue.c  pqueue.h  thread.c
tests/: CMakeLists.txt  atomic.c  queue_cas.h  testq.c
